--- a/secret-invite.html
+++ b/secret-invite.html
@@ -436,10 +436,23 @@ function buildCheckoutURL(tier,color,areaId){
 =========================== */
 function roomLabel(color){ return `${color[0].toUpperCase()+color.slice(1)} Room` }
 function makeICS({title, description, locationText, startLocal, durationMinutes=120}){
-  const dtStartUtc = new Date(startLocal.getTime() - (startLocal.getTimezoneOffset()*60000));
-  const dtEndUtc = new Date(dtStartUtc.getTime() + durationMinutes*60000);
-  const fmt = (d)=> d.toISOString().replace(/[-:]/g,'').replace(/\.\d{3}Z$/,'Z');
+  // Format local date/time as floating time (no Z) and pin it to America/New_York
+  const TZID = "America/New_York";
+  const pad = (n)=> String(n).padStart(2,"0");
+  const fmtLocal = (d)=>{
+    const y = d.getFullYear();
+    const m = pad(d.getMonth()+1);
+    const day = pad(d.getDate());
+    const hh = pad(d.getHours());
+    const mm = pad(d.getMinutes());
+    const ss = "00";
+    return `${y}${m}${day}T${hh}${mm}${ss}`;
+  };
+
+  const dtStartLocal = fmtLocal(startLocal);
+  const dtEndLocal = fmtLocal(new Date(startLocal.getTime() + durationMinutes*60000));
   const uid = `lelibido-${Math.random().toString(36).slice(2)}@lelibido.com`;
+
   const ics = [
     "BEGIN:VCALENDAR",
     "VERSION:2.0",
@@ -448,15 +461,17 @@ function makeICS({title, description, locationText, startLocal, durationMinutes=
     "METHOD:PUBLISH",
     "BEGIN:VEVENT",
     `UID:${uid}`,
-    `DTSTAMP:${fmt(new Date())}`,
-    `DTSTART:${fmt(dtStartUtc)}`,
-    `DTEND:${fmt(dtEndUtc)}`,
+    `DTSTAMP:${fmtLocal(new Date())}`,
+    // Use local time with TZID so calendars don’t convert it away from your intended start
+    `DTSTART;TZID=${TZID}:${dtStartLocal}`,
+    `DTEND;TZID=${TZID}:${dtEndLocal}`,
     `SUMMARY:${title}`,
     `DESCRIPTION:${description.replace(/\n/g,'\\n')}`,
     `LOCATION:${locationText}`,
     "END:VEVENT",
     "END:VCALENDAR"
   ].join("\r\n");
+
   return new Blob([ics], {type:"text/calendar"});
 }
 
