--- a/secret-invite.html
+++ b/secret-invite.html
@@ -401,19 +401,28 @@ function grantAccess({date, tier, color}){  // tier: "single" or "all"
 function hasAccess({date, color}){ const d=readAccess()[date]; return !!(d && (d.all || (d.colors && d.colors[color]))) }
 
 /* ===========================
-   Stripe Payment Link URLs  (REPLACE THESE)
+   Stripe Checkout via Netlify Function
 =========================== */
-const STRIPE_LINK_SINGLE = "https://buy.stripe.com/your_single_room_payment_link"; // $2 tonight
-const STRIPE_LINK_ALL    = "https://buy.stripe.com/your_all_rooms_payment_link";  // $3 tonight
-function buildCheckoutURL(tier,color,areaId){
-  const date=todayStr();
-  const base = tier==="single" ? STRIPE_LINK_SINGLE : STRIPE_LINK_ALL;
-  const ref = `${date}|${areaId}|${color}|${Math.random().toString(36).slice(2,8)}`;
-  const here = location.origin+location.pathname;
-  const success = encodeURIComponent(`${here}?paid=${tier}&date=${date}&color=${color}&area=${areaId}#ok`);
-  const cancel  = encodeURIComponent(`${here}`);
-  const join = base.includes("?") ? "&" : "?";
-  return `${base}${join}client_reference_id=${encodeURIComponent(ref)}&success_url=${success}&cancel_url=${cancel}`;
+async function startCheckout(tier, color, areaId) {
+  const date = todayStr();
+  const successBase = location.origin + location.pathname;
+
+  const resp = await fetch('/.netlify/functions/checkout', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ tier, color, area: areaId, date, successBase })
+  });
+
+  if (!resp.ok) {
+    alert('Could not start checkout. Please try again.');
+    return;
+  }
+  const { url } = await resp.json();
+  if (url) {
+    location.href = url; // redirect to Stripe Checkout
+  } else {
+    alert('Checkout session failed.');
+  }
 }
 /* On return from Stripe: grant access and immediately reveal the details for that color & area */
 (function handleReturnFromStripe(){
@@ -536,14 +545,25 @@ function showLockedPaywall({color,venue,theme,areaId}){
         <div><strong>Theme:</strong> <span class="blurred">${theme}</span></div>
       </div>
       <div class="buttons">
-        <a class="btn primary" id="paySingleBtn">Gain access to the ${color} room tonight for only $2</a>
-        <a class="btn" id="payAllBtn">Gain access to every room tonight for only $3</a>
+        <a class="btn primary" id="paySingleBtn" href="#">Gain access to the ${color} room tonight for only $2</a>
+        <a class="btn" id="payAllBtn" href="#">Gain access to every room tonight for only $3</a>
       </div>
     </div>
   `;
   modalBackdrop.classList.add("show");
-  document.getElementById("paySingleBtn").href = buildCheckoutURL("single", color, areaId);
-  document.getElementById("payAllBtn").href    = buildCheckoutURL("all", color, areaId);
+
+  // Attach handlers after the elements are injected
+  const singleBtn = document.getElementById("paySingleBtn");
+  const allBtn    = document.getElementById("payAllBtn");
+
+  singleBtn.addEventListener('click', (e)=>{
+    e.preventDefault();
+    startCheckout('single', color, areaId);
+  });
+  allBtn.addEventListener('click', (e)=>{
+    e.preventDefault();
+    startCheckout('all', color, areaId);
+  });
 }
 
 /* ===========================
