--- a/Result-new.html
+++ b/Result-new.html
@@ -198,6 +198,13 @@
     </button>
   </div>
 
+<!-- Date Now button with heat animation -->
+<div style="margin-bottom: 30px;">
+  <a href="/get-lucky.html">
+    <button class="heat-button">DATE NOW</button>
+  </a>
+</div>
+
 <script>
   function escapeHTML(str) {
     return String(str || "").replace(/[&<>"']/g, (c) => ({
