--- a/Get-lucky.html
+++ b/Get-lucky.html
@@ -174,7 +174,7 @@
       <div class="slip">
         <div class="fortune" id="fortuneText">Your fortune goes here.</div>
       </div>
-      <button class="btn" id="closeFortune">DATE NOW</button>
+      <button class="btn" id="closeFortune">GET LUCKY TONIGHT</button>
     </div>
   </div>
 
