--- a/secret-invite.html
+++ b/secret-invite.html
@@ -198,8 +198,6 @@ function getArchetypeColor(){
 
 /* ===========================
    Areas + venues
-   - Right now we only offer Central New Jersey
-   - Add more entries to AREAS later (users can select multiple)
 =========================== */
 const AREAS = [
   { id:"central-nj", label:"Central New Jersey" }
@@ -209,18 +207,13 @@ const AREAS = [
 
 const VENUES_BY_AREA = {
   "central-nj":[
-    // Add as many venues as you want here — the picker rotates them by day/color
     { name:"Metropolitan Cafe", address:"8 E Main St, Freehold, NJ 07728", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Metropolitan+Cafe+8+E+Main+St,+Freehold,+NJ+07728" },
     { name:"Nonna’s Cucina", address:"448 US-9, Englishtown, NJ 07726", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Nonna%E2%80%99s+Cucina+448+US-9,+Englishtown,+NJ+07726" }
   ],
-  // "manhattan":[ ... ],
-  // "brooklyn":[ ... ],
 };
 
 /* =========
    Themes
-   - Same list, but each color gets a deterministic offset so all three rooms differ nightly
-   - The value already includes title + attire, e.g. "Heaven vs. Hell: dress up as an Angel or Devil"
 =========== */
 const THEMES_BASE = [
   "Heaven vs. Hell: dress up as an Angel or Devil",
@@ -264,7 +257,6 @@ function getSelectedAreas(){
       if(Array.isArray(a) && a.length) return a;
     }
   }catch(e){}
-  // default to Central NJ
   return ["central-nj"];
 }
 function setSelectedAreas(arr){ localStorage.setItem(AREAS_KEY, JSON.stringify(arr)) }
@@ -304,7 +296,7 @@ areasEl.addEventListener("change", (e)=>{
   }
 });
 
-/* Utilities to choose area + venue when multiple areas are selected */
+/* Utilities */
 function selectedAreasWithVenues(){
   const saved=getSelectedAreas();
   const hasVenues=saved.filter(a=>(VENUES_BY_AREA[a]||[]).length>0);
@@ -320,7 +312,7 @@ function pickAreaForColor(color){
   const areas=selectedAreasWithVenues();
   if(areas.length===1) return areas[0];
   const colorOffset={blue:0,green:1,red:2}[color]??0;
-  const idx=(weekNumber()+colorOffset) % areas.length; // deterministic by week+color
+  const idx=(weekNumber()+colorOffset) % areas.length;
   return areas[idx];
 }
 function venueFor(areaId, color){
@@ -332,14 +324,12 @@ function venueFor(areaId, color){
 }
 function todayStr(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}` }
 function formatLongDateTime(dateObj, timeLabel){
-  // timeLabel like "7:30 PM"
   const dateStr = dateObj.toLocaleDateString(undefined,{weekday:'long', year:'numeric', month:'long', day:'numeric'});
   return `${dateStr} at ${timeLabel}`;
 }
 function parseTimeOnDate(dateObj, timeLabel){
-  // returns a Date with the given local date and time
   const m = timeLabel.match(/^\s*(\d{1,2}):(\d{2})\s*([AP]M)\s*$/i);
-  let h=19, min=30; // default 7:30 PM
+  let h=19, min=30;
   if(m){
     h = parseInt(m[1],10);
     min = parseInt(m[2],10);
@@ -374,7 +364,6 @@ const doorBtn={
 doorImg.blue.src=DOOR_CLOSED.blue;
 doorImg.green.src=DOOR_CLOSED.green;
 doorImg.red.src=DOOR_CLOSED.red;
-// Preload frames
 ["blue","green","red"].forEach(c=>DOOR_FRAMES[c].forEach(src=>{const i=new Image();i.src=src;}));
 
 /* Faster animation: 120ms per frame */
@@ -393,7 +382,7 @@ function playDoorAnimation(color){
 const ACCESS_KEY="lelibido:entitlements";
 function readAccess(){ try{ return JSON.parse(localStorage.getItem(ACCESS_KEY)||"{}") }catch(e){ return {} } }
 function writeAccess(obj){ localStorage.setItem(ACCESS_KEY, JSON.stringify(obj)) }
-function grantAccess({date, tier, color}){  // tier: "single" or "all"
+function grantAccess({date, tier, color}){
   const data=readAccess(); data[date]=data[date]||{all:false,colors:{}};
   if(tier==="all") data[date].all=true; else if(color){ data[date].colors[color]=true; }
   writeAccess(data);
@@ -419,15 +408,14 @@ async function startCheckout(tier, color, areaId) {
   }
   const { url } = await resp.json();
   if (url) {
-    location.href = url; // redirect to Stripe Checkout
+    location.href = url;
   } else {
     alert('Checkout session failed.');
   }
 }
-/* On return from Stripe: grant access and immediately reveal the details for that color & area */
 (function handleReturnFromStripe(){
   const params=new URLSearchParams(location.search);
-  const paid=params.get("paid"); // "single" | "all"
+  const paid=params.get("paid");
   const date=params.get("date");
   const color=params.get("color");
   const area =params.get("area") || pickAreaForColor(color||"blue");
@@ -435,7 +423,7 @@ async function startCheckout(tier, color, areaId) {
     grantAccess({date, tier: paid==="all"?"all":"single", color});
     const theme=themeForColor(color||"blue");
     const venue=venueFor(area, color||"blue");
-    history.replaceState({}, "", location.pathname); // clean URL
+    history.replaceState({}, "", location.pathname);
     playDoorAnimation(color||"blue").then(()=> showInvitation({color:color||"blue", venue, theme}));
   }
 })();
@@ -445,7 +433,6 @@ async function startCheckout(tier, color, areaId) {
 =========================== */
 function roomLabel(color){ return `${color[0].toUpperCase()+color.slice(1)} Room` }
 function makeICS({title, description, locationText, startLocal, durationMinutes=120}){
-  // Format local date/time as floating time (no Z) and pin it to America/New_York
   const TZID = "America/New_York";
   const pad = (n)=> String(n).padStart(2,"0");
   const fmtLocal = (d)=>{
@@ -471,7 +458,6 @@ function makeICS({title, description, locationText, startLocal, durationMinutes=
     "BEGIN:VEVENT",
     `UID:${uid}`,
     `DTSTAMP:${fmtLocal(new Date())}`,
-    // Use local time with TZID so calendars don’t convert it away from your intended start
     `DTSTART;TZID=${TZID}:${dtStartLocal}`,
     `DTEND;TZID=${TZID}:${dtEndLocal}`,
     `SUMMARY:${title}`,
@@ -497,7 +483,7 @@ function showInvitation({color,venue,theme}){
   const today = new Date();
   const startLabel = venue?.time ?? "7:30 PM";
   const startsText = formatLongDateTime(today, startLabel);
-  const themeLine = theme; // already includes "Title: attire"
+  const themeLine = theme;
   const room = roomLabel(color);
 
   // Build content
@@ -518,16 +504,47 @@ function showInvitation({color,venue,theme}){
   `;
   modalBackdrop.classList.add("show");
 
-  // Wire up Add to Calendar
+  // ==== Add to Calendar (Safari keeps Blob path; Chrome/Brave on iOS use server-served ICS/webcal) ====
   const startLocal = parseTimeOnDate(today, startLabel);
   const title = `${room} • ${theme.split(':')[0]}`;
   const description = themeLine;
   const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
-  const icsBlob = makeICS({title, description, locationText, startLocal});
-  const url = URL.createObjectURL(icsBlob);
   const addBtn = document.getElementById("addToCalendarBtn");
-  addBtn.setAttribute("href", url);
-  addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
+
+  // Detect iOS + Safari
+  const ua = navigator.userAgent;
+  const isIOS = /iPad|iPhone|iPod/.test(ua);
+  const isSafari = /^((?!chrome|android).)*safari/i.test(ua);
+
+  if (isIOS && !isSafari) {
+    // Non-Safari iOS (Chrome/Brave): use function with proper headers + webcal:// to open Calendar
+    function two(n){ return String(n).padStart(2,'0'); }
+    const startIsoLocal =
+      `${startLocal.getFullYear()}-${two(startLocal.getMonth()+1)}-${two(startLocal.getDate())}T${two(startLocal.getHours())}:${two(startLocal.getMinutes())}:00`;
+
+    const params = new URLSearchParams({
+      title,
+      description,
+      location: locationText,
+      start: startIsoLocal,
+      duration: String(120),
+      tzid: 'America/New_York'
+    });
+
+    // Absolute URL then swap scheme to webcal:// (forces Calendar handoff)
+    const tmp = document.createElement('a');
+    tmp.href = `/.netlify/functions/calendar?${params.toString()}`;
+    const webcalHref = tmp.href.replace(/^https?:/, 'webcal:');
+
+    addBtn.setAttribute("href", webcalHref);
+    addBtn.removeAttribute("download");
+  } else {
+    // Safari (iOS/macOS) and non-iOS browsers: keep your existing Blob/ObjectURL flow
+    const icsBlob = makeICS({ title, description, locationText, startLocal });
+    const url = URL.createObjectURL(icsBlob);
+    addBtn.setAttribute("href", url);
+    addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
+  }
 }
 
 function showLockedPaywall({color,venue,theme,areaId}){
@@ -552,7 +569,6 @@ function showLockedPaywall({color,venue,theme,areaId}){
   `;
   modalBackdrop.classList.add("show");
 
-  // Attach handlers after the elements are injected
   const singleBtn = document.getElementById("paySingleBtn");
   const allBtn    = document.getElementById("payAllBtn");
 
@@ -577,7 +593,7 @@ function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
   const theme   = themeForColor(color);
-  const areaId  = pickAreaForColor(color);  // choose among user-selected areas
+  const areaId  = pickAreaForColor(color);
   const venue   = venueFor(areaId, color);
   const today   = todayStr();
 
