--- a/secret-invite.html
+++ b/secret-invite.html
@@ -201,8 +201,6 @@ function getArchetypeColor(){
 =========================== */
 const AREAS = [
   { id:"central-nj", label:"Central New Jersey" }
-  // { id:"manhattan", label:"Manhattan" },
-  // { id:"brooklyn",  label:"Brooklyn"  },
 ];
 
 const VENUES_BY_AREA = {
@@ -504,7 +502,7 @@ function showInvitation({color,venue,theme}){
   `;
   modalBackdrop.classList.add("show");
 
-  // ==== Add to Calendar (Safari keeps Blob path; Chrome/Brave on iOS use server-served ICS/webcal) ====
+  // ==== Add to Calendar (Safari keeps Blob path; Chrome/Brave on iOS use script-triggered webcal with fallback) ====
   const startLocal = parseTimeOnDate(today, startLabel);
   const title = `${room} • ${theme.split(':')[0]}`;
   const description = themeLine;
@@ -517,7 +515,7 @@ function showInvitation({color,venue,theme}){
   const isSafari = /^((?!chrome|android).)*safari/i.test(ua);
 
   if (isIOS && !isSafari) {
-    // Non-Safari iOS (Chrome/Brave): use function with proper headers + webcal:// to open Calendar
+    // Build absolute HTTPS URL to the Netlify function (properly encoded)
     function two(n){ return String(n).padStart(2,'0'); }
     const startIsoLocal =
       `${startLocal.getFullYear()}-${two(startLocal.getMonth()+1)}-${two(startLocal.getDate())}T${two(startLocal.getHours())}:${two(startLocal.getMinutes())}:00`;
@@ -531,13 +529,32 @@ function showInvitation({color,venue,theme}){
       tzid: 'America/New_York'
     });
 
-    // Absolute URL then swap scheme to webcal:// (forces Calendar handoff)
     const tmp = document.createElement('a');
     tmp.href = `/.netlify/functions/calendar?${params.toString()}`;
-    const webcalHref = tmp.href.replace(/^https?:/, 'webcal:');
+    const httpsHref = tmp.href;                         // absolute https://...
+    const webcalHref = httpsHref.replace(/^https?:/, 'webcal:');
 
-    addBtn.setAttribute("href", webcalHref);
+    // Use a click handler to trigger the custom scheme as a direct user gesture
+    addBtn.addEventListener('click', (e)=>{
+      e.preventDefault();
+
+      // Try webcal handoff first
+      window.location.href = webcalHref;
+
+      // Fallback: if the handoff is blocked, open the HTTPS ICS (served inline) after a short delay
+      // (Chrome/Brave will either switch apps or stay; this gives a backup)
+      setTimeout(()=>{
+        // Only run fallback if we are still visible (i.e., Calendar didn't open)
+        if (!document.hidden) {
+          window.location.href = httpsHref;
+        }
+      }, 700);
+    }, { once:true });
+
+    // Make it look like a normal link tap target
+    addBtn.setAttribute('role','button');
     addBtn.removeAttribute("download");
+    addBtn.removeAttribute("href");
   } else {
     // Safari (iOS/macOS) and non-iOS browsers: keep your existing Blob/ObjectURL flow
     const icsBlob = makeICS({ title, description, locationText, startLocal });
