--- a/secret-invite.html
+++ b/secret-invite.html
@@ -201,6 +201,8 @@ function getArchetypeColor(){
 =========================== */
 const AREAS = [
   { id:"central-nj", label:"Central New Jersey" }
+  // { id:"manhattan", label:"Manhattan" },
+  // { id:"brooklyn",  label:"Brooklyn"  },
 ];
 
 const VENUES_BY_AREA = {
@@ -208,6 +210,8 @@ const VENUES_BY_AREA = {
     { name:"Metropolitan Cafe", address:"8 E Main St, Freehold, NJ 07728", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Metropolitan+Cafe+8+E+Main+St,+Freehold,+NJ+07728" },
     { name:"Nonna’s Cucina", address:"448 US-9, Englishtown, NJ 07726", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Nonna%E2%80%99s+Cucina+448+US-9,+Englishtown,+NJ+07726" }
   ],
+  // "manhattan":[ ... ],
+  // "brooklyn":[ ... ],
 };
 
 /* =========
@@ -255,6 +259,7 @@ function getSelectedAreas(){
       if(Array.isArray(a) && a.length) return a;
     }
   }catch(e){}
+  // default to Central NJ
   return ["central-nj"];
 }
 function setSelectedAreas(arr){ localStorage.setItem(AREAS_KEY, JSON.stringify(arr)) }
@@ -294,7 +299,7 @@ areasEl.addEventListener("change", (e)=>{
   }
 });
 
-/* Utilities */
+/* Utilities to choose area + venue when multiple areas are selected */
 function selectedAreasWithVenues(){
   const saved=getSelectedAreas();
   const hasVenues=saved.filter(a=>(VENUES_BY_AREA[a]||[]).length>0);
@@ -310,7 +315,7 @@ function pickAreaForColor(color){
   const areas=selectedAreasWithVenues();
   if(areas.length===1) return areas[0];
   const colorOffset={blue:0,green:1,red:2}[color]??0;
-  const idx=(weekNumber()+colorOffset) % areas.length;
+  const idx=(weekNumber()+colorOffset) % areas.length; // deterministic by week+color
   return areas[idx];
 }
 function venueFor(areaId, color){
@@ -322,12 +327,14 @@ function venueFor(areaId, color){
 }
 function todayStr(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}` }
 function formatLongDateTime(dateObj, timeLabel){
+  // timeLabel like "7:30 PM"
   const dateStr = dateObj.toLocaleDateString(undefined,{weekday:'long', year:'numeric', month:'long', day:'numeric'});
   return `${dateStr} at ${timeLabel}`;
 }
 function parseTimeOnDate(dateObj, timeLabel){
+  // returns a Date with the given local date and time
   const m = timeLabel.match(/^\s*(\d{1,2}):(\d{2})\s*([AP]M)\s*$/i);
-  let h=19, min=30;
+  let h=19, min=30; // default 7:30 PM
   if(m){
     h = parseInt(m[1],10);
     min = parseInt(m[2],10);
@@ -362,6 +369,7 @@ const doorBtn={
 doorImg.blue.src=DOOR_CLOSED.blue;
 doorImg.green.src=DOOR_CLOSED.green;
 doorImg.red.src=DOOR_CLOSED.red;
+// Preload frames
 ["blue","green","red"].forEach(c=>DOOR_FRAMES[c].forEach(src=>{const i=new Image();i.src=src;}));
 
 /* Faster animation: 120ms per frame */
@@ -380,7 +388,7 @@ function playDoorAnimation(color){
 const ACCESS_KEY="lelibido:entitlements";
 function readAccess(){ try{ return JSON.parse(localStorage.getItem(ACCESS_KEY)||"{}") }catch(e){ return {} } }
 function writeAccess(obj){ localStorage.setItem(ACCESS_KEY, JSON.stringify(obj)) }
-function grantAccess({date, tier, color}){
+function grantAccess({date, tier, color}){  // tier: "single" or "all"
   const data=readAccess(); data[date]=data[date]||{all:false,colors:{}};
   if(tier==="all") data[date].all=true; else if(color){ data[date].colors[color]=true; }
   writeAccess(data);
@@ -406,14 +414,15 @@ async function startCheckout(tier, color, areaId) {
   }
   const { url } = await resp.json();
   if (url) {
-    location.href = url;
+    location.href = url; // redirect to Stripe Checkout
   } else {
     alert('Checkout session failed.');
   }
 }
+/* On return from Stripe: grant access and immediately reveal the details for that color & area */
 (function handleReturnFromStripe(){
   const params=new URLSearchParams(location.search);
-  const paid=params.get("paid");
+  const paid=params.get("paid"); // "single" | "all"
   const date=params.get("date");
   const color=params.get("color");
   const area =params.get("area") || pickAreaForColor(color||"blue");
@@ -421,7 +430,7 @@ async function startCheckout(tier, color, areaId) {
     grantAccess({date, tier: paid==="all"?"all":"single", color});
     const theme=themeForColor(color||"blue");
     const venue=venueFor(area, color||"blue");
-    history.replaceState({}, "", location.pathname);
+    history.replaceState({}, "", location.pathname); // clean URL
     playDoorAnimation(color||"blue").then(()=> showInvitation({color:color||"blue", venue, theme}));
   }
 })();
@@ -431,6 +440,7 @@ async function startCheckout(tier, color, areaId) {
 =========================== */
 function roomLabel(color){ return `${color[0].toUpperCase()+color.slice(1)} Room` }
 function makeICS({title, description, locationText, startLocal, durationMinutes=120}){
+  // Format local date/time as floating time (no Z) and pin it to America/New_York
   const TZID = "America/New_York";
   const pad = (n)=> String(n).padStart(2,"0");
   const fmtLocal = (d)=>{
@@ -456,6 +466,7 @@ function makeICS({title, description, locationText, startLocal, durationMinutes=
     "BEGIN:VEVENT",
     `UID:${uid}`,
     `DTSTAMP:${fmtLocal(new Date())}`,
+    // Use local time with TZID so calendars don’t convert it away from your intended start
     `DTSTART;TZID=${TZID}:${dtStartLocal}`,
     `DTEND;TZID=${TZID}:${dtEndLocal}`,
     `SUMMARY:${title}`,
@@ -481,7 +492,7 @@ function showInvitation({color,venue,theme}){
   const today = new Date();
   const startLabel = venue?.time ?? "7:30 PM";
   const startsText = formatLongDateTime(today, startLabel);
-  const themeLine = theme;
+  const themeLine = theme; // already includes "Title: attire"
   const room = roomLabel(color);
 
   // Build content
@@ -502,7 +513,7 @@ function showInvitation({color,venue,theme}){
   `;
   modalBackdrop.classList.add("show");
 
-  // ==== Add to Calendar (Safari keeps Blob path; Chrome/Brave on iOS use script-triggered webcal with fallback) ====
+  // Wire up Add to Calendar
   const startLocal = parseTimeOnDate(today, startLabel);
   const title = `${room} • ${theme.split(':')[0]}`;
   const description = themeLine;
@@ -515,48 +526,21 @@ function showInvitation({color,venue,theme}){
   const isSafari = /^((?!chrome|android).)*safari/i.test(ua);
 
   if (isIOS && !isSafari) {
-    // Build absolute HTTPS URL to the Netlify function (properly encoded)
+    // ===== Chrome/Brave on iOS → Use Google Calendar "Add" URL (most reliable there)
     function two(n){ return String(n).padStart(2,'0'); }
-    const startIsoLocal =
-      `${startLocal.getFullYear()}-${two(startLocal.getMonth()+1)}-${two(startLocal.getDate())}T${two(startLocal.getHours())}:${two(startLocal.getMinutes())}:00`;
+    function yyyymmddThhmmss(d){
+      return `${d.getFullYear()}${two(d.getMonth()+1)}${two(d.getDate())}T${two(d.getHours())}${two(d.getMinutes())}00`;
+    }
+    const endLocal = new Date(startLocal.getTime() + 120*60000); // +120min
+    const dates = `${yyyymmddThhmmss(startLocal)}/${yyyymmddThhmmss(endLocal)}`;
 
-    const params = new URLSearchParams({
-      title,
-      description,
-      location: locationText,
-      start: startIsoLocal,
-      duration: String(120),
-      tzid: 'America/New_York'
-    });
+    const gcal = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&details=${encodeURIComponent(description)}&location=${encodeURIComponent(locationText)}&dates=${dates}&ctz=America/New_York`;
 
-    const tmp = document.createElement('a');
-    tmp.href = `/.netlify/functions/calendar?${params.toString()}`;
-    const httpsHref = tmp.href;                         // absolute https://...
-    const webcalHref = httpsHref.replace(/^https?:/, 'webcal:');
-
-    // Use a click handler to trigger the custom scheme as a direct user gesture
-    addBtn.addEventListener('click', (e)=>{
-      e.preventDefault();
-
-      // Try webcal handoff first
-      window.location.href = webcalHref;
-
-      // Fallback: if the handoff is blocked, open the HTTPS ICS (served inline) after a short delay
-      // (Chrome/Brave will either switch apps or stay; this gives a backup)
-      setTimeout(()=>{
-        // Only run fallback if we are still visible (i.e., Calendar didn't open)
-        if (!document.hidden) {
-          window.location.href = httpsHref;
-        }
-      }, 700);
-    }, { once:true });
-
-    // Make it look like a normal link tap target
-    addBtn.setAttribute('role','button');
+    addBtn.setAttribute("href", gcal);
+    addBtn.setAttribute("target", "_blank");
     addBtn.removeAttribute("download");
-    addBtn.removeAttribute("href");
   } else {
-    // Safari (iOS/macOS) and non-iOS browsers: keep your existing Blob/ObjectURL flow
+    // ===== Safari (iOS/macOS) and non-iOS browsers → keep your Blob/ObjectURL flow
     const icsBlob = makeICS({ title, description, locationText, startLocal });
     const url = URL.createObjectURL(icsBlob);
     addBtn.setAttribute("href", url);
@@ -586,6 +570,7 @@ function showLockedPaywall({color,venue,theme,areaId}){
   `;
   modalBackdrop.classList.add("show");
 
+  // Attach handlers after the elements are injected
   const singleBtn = document.getElementById("paySingleBtn");
   const allBtn    = document.getElementById("payAllBtn");
 
@@ -610,7 +595,7 @@ function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
   const theme   = themeForColor(color);
-  const areaId  = pickAreaForColor(color);
+  const areaId  = pickAreaForColor(color);  // choose among user-selected areas
   const venue   = venueFor(areaId, color);
   const today   = todayStr();
 
