--- a/secret-invite.html
+++ b/secret-invite.html
@@ -513,38 +513,55 @@ function showInvitation({color,venue,theme}){
   `;
   modalBackdrop.classList.add("show");
 
-  // Wire up Add to Calendar
+  // ===== Add to Calendar routing =====
   const startLocal = parseTimeOnDate(today, startLabel);
   const title = `${room} • ${theme.split(':')[0]}`;
   const description = themeLine;
   const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
   const addBtn = document.getElementById("addToCalendarBtn");
 
-  // Detect iOS + Safari
+  // Browser detection (robust enough for iOS routing)
   const ua = navigator.userAgent;
   const isIOS = /iPad|iPhone|iPod/.test(ua);
-  const isSafari = /^((?!chrome|android).)*safari/i.test(ua);
+  const isSafari = /\bSafari\b/i.test(ua) && !/\bCriOS\b/i.test(ua) && !/\bFxiOS\b/i.test(ua) && !/\bEdgiOS\b/i.test(ua);
+
+  // Helper for Google Calendar URL
+  function two(n){ return String(n).padStart(2,'0'); }
+  function gcalDate(d){ return `${d.getFullYear()}${two(d.getMonth()+1)}${two(d.getDate())}T${two(d.getHours())}${two(d.getMinutes())}00`; }
+  const endLocal = new Date(startLocal.getTime() + 120*60000);
+  const datesParam = `${gcalDate(startLocal)}/${gcalDate(endLocal)}`;
+  const gcalUrl = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&details=${encodeURIComponent(description)}&location=${encodeURIComponent(locationText)}&dates=${datesParam}&ctz=America/New_York`;
 
   if (isIOS && !isSafari) {
-    // ===== Chrome/Brave on iOS → Use Google Calendar "Add" URL (most reliable there)
-    function two(n){ return String(n).padStart(2,'0'); }
-    function yyyymmddThhmmss(d){
-      return `${d.getFullYear()}${two(d.getMonth()+1)}${two(d.getDate())}T${two(d.getHours())}${two(d.getMinutes())}00`;
-    }
-    const endLocal = new Date(startLocal.getTime() + 120*60000); // +120min
-    const dates = `${yyyymmddThhmmss(startLocal)}/${yyyymmddThhmmss(endLocal)}`;
-
-    const gcal = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&details=${encodeURIComponent(description)}&location=${encodeURIComponent(locationText)}&dates=${dates}&ctz=America/New_York`;
-
-    addBtn.setAttribute("href", gcal);
+    // Chrome/Brave/etc. on iOS → use Google Calendar (gives notifications)
+    addBtn.setAttribute("href", gcalUrl);
     addBtn.setAttribute("target", "_blank");
     addBtn.removeAttribute("download");
+
+    // Optional helper text (remove if you don't want it)
+    const note = document.createElement('div');
+    note.className = 'tiny';
+    note.textContent = 'Using Apple Calendar? Open this page in Safari.';
+    addBtn.parentElement.appendChild(note);
   } else {
-    // ===== Safari (iOS/macOS) and non-iOS browsers → keep your Blob/ObjectURL flow
+    // Safari on iOS/macOS + all desktop browsers → keep your ICS flow
     const icsBlob = makeICS({ title, description, locationText, startLocal });
     const url = URL.createObjectURL(icsBlob);
     addBtn.setAttribute("href", url);
     addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
+
+    // (Desktop convenience) Also offer Google Calendar link just below
+    if (!isIOS) {
+      const alt = document.createElement('a');
+      alt.className = 'tiny';
+      alt.href = gcalUrl;
+      alt.target = '_blank';
+      alt.rel = 'noopener';
+      alt.style.display = 'inline-block';
+      alt.style.marginTop = '6px';
+      alt.textContent = 'Prefer Google Calendar? Click here.';
+      addBtn.parentElement.appendChild(alt);
+    }
   }
 }
 
