--- a/secret-invite.html
+++ b/secret-invite.html
@@ -520,10 +520,19 @@ function showInvitation({color,venue,theme}){
   const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
   const addBtn = document.getElementById("addToCalendarBtn");
 
-  // Browser detection (robust enough for iOS routing)
+  // ---------- UPDATED BROWSER DETECTION (treat Brave and others as non-Safari) ----------
   const ua = navigator.userAgent;
   const isIOS = /iPad|iPhone|iPod/.test(ua);
-  const isSafari = /\bSafari\b/i.test(ua) && !/\bCriOS\b/i.test(ua) && !/\bFxiOS\b/i.test(ua) && !/\bEdgiOS\b/i.test(ua);
+  const isCriOS = /\bCriOS\b/i.test(ua);        // Chrome on iOS
+  const isFxiOS = /\bFxiOS\b/i.test(ua);        // Firefox on iOS
+  const isEdgiOS = /\bEdgiOS\b/i.test(ua);      // Edge on iOS
+  const isBrave = /\bBrave\b/i.test(ua);        // Brave on iOS (Brave token present)
+  const isDuckDuckGo = /\bDuckDuckGo\b/i.test(ua); // DDG browser on iOS
+  const isSafari =
+    isIOS &&
+    /\bSafari\b/i.test(ua) &&
+    !(isCriOS || isFxiOS || isEdgiOS || isBrave || isDuckDuckGo);
+  // --------------------------------------------------------------------------------------
 
   // Helper for Google Calendar URL
   function two(n){ return String(n).padStart(2,'0'); }
@@ -533,18 +542,18 @@ function showInvitation({color,venue,theme}){
   const gcalUrl = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&details=${encodeURIComponent(description)}&location=${encodeURIComponent(locationText)}&dates=${datesParam}&ctz=America/New_York`;
 
   if (isIOS && !isSafari) {
-    // Chrome/Brave/etc. on iOS → use Google Calendar (gives notifications)
+    // iOS non-Safari (Chrome/Brave/Firefox/Edge/DDG) → Google Calendar (opens app or web, sends notifications)
     addBtn.setAttribute("href", gcalUrl);
     addBtn.setAttribute("target", "_blank");
     addBtn.removeAttribute("download");
 
-    // Optional helper text (remove if you don't want it)
+    // Optional helper text
     const note = document.createElement('div');
     note.className = 'tiny';
     note.textContent = 'Using Apple Calendar? Open this page in Safari.';
     addBtn.parentElement.appendChild(note);
   } else {
-    // Safari on iOS/macOS + all desktop browsers → keep your ICS flow
+    // Safari on iOS/macOS + all desktop browsers → keep ICS flow
     const icsBlob = makeICS({ title, description, locationText, startLocal });
     const url = URL.createObjectURL(icsBlob);
     addBtn.setAttribute("href", url);
