--- a/secret-invite.html
+++ b/secret-invite.html
@@ -201,8 +201,6 @@ function getArchetypeColor(){
 =========================== */
 const AREAS = [
   { id:"central-nj", label:"Central New Jersey" }
-  // { id:"manhattan", label:"Manhattan" },
-  // { id:"brooklyn",  label:"Brooklyn"  },
 ];
 
 const VENUES_BY_AREA = {
@@ -210,8 +208,6 @@ const VENUES_BY_AREA = {
     { name:"Metropolitan Cafe", address:"8 E Main St, Freehold, NJ 07728", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Metropolitan+Cafe+8+E+Main+St,+Freehold,+NJ+07728" },
     { name:"Nonna’s Cucina", address:"448 US-9, Englishtown, NJ 07726", time:"7:30 PM", maps:"https://www.google.com/maps/search/?api=1&query=Nonna%E2%80%99s+Cucina+448+US-9,+Englishtown,+NJ+07726" }
   ],
-  // "manhattan":[ ... ],
-  // "brooklyn":[ ... ],
 };
 
 /* =========
@@ -259,7 +255,6 @@ function getSelectedAreas(){
       if(Array.isArray(a) && a.length) return a;
     }
   }catch(e){}
-  // default to Central NJ
   return ["central-nj"];
 }
 function setSelectedAreas(arr){ localStorage.setItem(AREAS_KEY, JSON.stringify(arr)) }
@@ -299,7 +294,7 @@ areasEl.addEventListener("change", (e)=>{
   }
 });
 
-/* Utilities to choose area + venue when multiple areas are selected */
+/* Utilities */
 function selectedAreasWithVenues(){
   const saved=getSelectedAreas();
   const hasVenues=saved.filter(a=>(VENUES_BY_AREA[a]||[]).length>0);
@@ -315,7 +310,7 @@ function pickAreaForColor(color){
   const areas=selectedAreasWithVenues();
   if(areas.length===1) return areas[0];
   const colorOffset={blue:0,green:1,red:2}[color]??0;
-  const idx=(weekNumber()+colorOffset) % areas.length; // deterministic by week+color
+  const idx=(weekNumber()+colorOffset) % areas.length;
   return areas[idx];
 }
 function venueFor(areaId, color){
@@ -327,14 +322,12 @@ function venueFor(areaId, color){
 }
 function todayStr(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}-${String(d.getDate()).padStart(2,"0")}` }
 function formatLongDateTime(dateObj, timeLabel){
-  // timeLabel like "7:30 PM"
   const dateStr = dateObj.toLocaleDateString(undefined,{weekday:'long', year:'numeric', month:'long', day:'numeric'});
   return `${dateStr} at ${timeLabel}`;
 }
 function parseTimeOnDate(dateObj, timeLabel){
-  // returns a Date with the given local date and time
   const m = timeLabel.match(/^\s*(\d{1,2}):(\d{2})\s*([AP]M)\s*$/i);
-  let h=19, min=30; // default 7:30 PM
+  let h=19, min=30;
   if(m){
     h = parseInt(m[1],10);
     min = parseInt(m[2],10);
@@ -347,7 +340,7 @@ function parseTimeOnDate(dateObj, timeLabel){
 }
 
 /* ===========================
-   Door frames (images in /door/)
+   Door frames
 =========================== */
 const DOOR_FRAMES = {
   blue: Array.from({length:7},(_,i)=>`door/blue-door-${i+1}.png`),
@@ -369,10 +362,9 @@ const doorBtn={
 doorImg.blue.src=DOOR_CLOSED.blue;
 doorImg.green.src=DOOR_CLOSED.green;
 doorImg.red.src=DOOR_CLOSED.red;
-// Preload frames
 ["blue","green","red"].forEach(c=>DOOR_FRAMES[c].forEach(src=>{const i=new Image();i.src=src;}));
 
-/* Faster animation: 120ms per frame */
+/* Faster animation */
 function playDoorAnimation(color){
   const frames=DOOR_FRAMES[color]; const img=doorImg[color];
   return new Promise(resolve=>{
@@ -383,12 +375,12 @@ function playDoorAnimation(color){
 }
 
 /* ===========================
-   Entitlements (client-side “pay once per day”)
+   Entitlements
 =========================== */
 const ACCESS_KEY="lelibido:entitlements";
 function readAccess(){ try{ return JSON.parse(localStorage.getItem(ACCESS_KEY)||"{}") }catch(e){ return {} } }
 function writeAccess(obj){ localStorage.setItem(ACCESS_KEY, JSON.stringify(obj)) }
-function grantAccess({date, tier, color}){  // tier: "single" or "all"
+function grantAccess({date, tier, color}){
   const data=readAccess(); data[date]=data[date]||{all:false,colors:{}};
   if(tier==="all") data[date].all=true; else if(color){ data[date].colors[color]=true; }
   writeAccess(data);
@@ -396,7 +388,7 @@ function grantAccess({date, tier, color}){  // tier: "single" or "all"
 function hasAccess({date, color}){ const d=readAccess()[date]; return !!(d && (d.all || (d.colors && d.colors[color]))) }
 
 /* ===========================
-   Stripe Checkout via Netlify Function
+   Stripe Checkout
 =========================== */
 async function startCheckout(tier, color, areaId) {
   const date = todayStr();
@@ -414,15 +406,14 @@ async function startCheckout(tier, color, areaId) {
   }
   const { url } = await resp.json();
   if (url) {
-    location.href = url; // redirect to Stripe Checkout
+    location.href = url;
   } else {
     alert('Checkout session failed.');
   }
 }
-/* On return from Stripe: grant access and immediately reveal the details for that color & area */
 (function handleReturnFromStripe(){
   const params=new URLSearchParams(location.search);
-  const paid=params.get("paid"); // "single" | "all"
+  const paid=params.get("paid");
   const date=params.get("date");
   const color=params.get("color");
   const area =params.get("area") || pickAreaForColor(color||"blue");
@@ -430,17 +421,16 @@ async function startCheckout(tier, color, areaId) {
     grantAccess({date, tier: paid==="all"?"all":"single", color});
     const theme=themeForColor(color||"blue");
     const venue=venueFor(area, color||"blue");
-    history.replaceState({}, "", location.pathname); // clean URL
+    history.replaceState({}, "", location.pathname);
     playDoorAnimation(color||"blue").then(()=> showInvitation({color:color||"blue", venue, theme}));
   }
 })();
 
 /* ===========================
-   Modal helpers
+   Modal / Calendar helpers
 =========================== */
 function roomLabel(color){ return `${color[0].toUpperCase()+color.slice(1)} Room` }
 function makeICS({title, description, locationText, startLocal, durationMinutes=120}){
-  // Format local date/time as floating time (no Z) and pin it to America/New_York
   const TZID = "America/New_York";
   const pad = (n)=> String(n).padStart(2,"0");
   const fmtLocal = (d)=>{
@@ -466,7 +456,6 @@ function makeICS({title, description, locationText, startLocal, durationMinutes=
     "BEGIN:VEVENT",
     `UID:${uid}`,
     `DTSTAMP:${fmtLocal(new Date())}`,
-    // Use local time with TZID so calendars don’t convert it away from your intended start
     `DTSTART;TZID=${TZID}:${dtStartLocal}`,
     `DTEND;TZID=${TZID}:${dtEndLocal}`,
     `SUMMARY:${title}`,
@@ -492,10 +481,10 @@ function showInvitation({color,venue,theme}){
   const today = new Date();
   const startLabel = venue?.time ?? "7:30 PM";
   const startsText = formatLongDateTime(today, startLabel);
-  const themeLine = theme; // already includes "Title: attire"
+  const themeLine = theme;
   const room = roomLabel(color);
 
-  // Build content
+  // Content
   modalBody.innerHTML=`
     <div class="invite-card">
       <div class="invite-brand">${room}</div>
@@ -513,28 +502,27 @@ function showInvitation({color,venue,theme}){
   `;
   modalBackdrop.classList.add("show");
 
-  // ===== Add to Calendar routing =====
+  // Calendar routing
   const startLocal = parseTimeOnDate(today, startLabel);
   const title = `${room} • ${theme.split(':')[0]}`;
   const description = themeLine;
   const locationText = `${venue?.name ?? ""} — ${venue?.address ?? ""}`;
   const addBtn = document.getElementById("addToCalendarBtn");
 
-  // ---------- UPDATED BROWSER DETECTION (treat Brave and others as non-Safari) ----------
+  // Robust iOS browser detection (treat Chrome/Brave/Firefox/Edge/DuckDuckGo as non-Safari)
   const ua = navigator.userAgent;
   const isIOS = /iPad|iPhone|iPod/.test(ua);
   const isCriOS = /\bCriOS\b/i.test(ua);        // Chrome on iOS
   const isFxiOS = /\bFxiOS\b/i.test(ua);        // Firefox on iOS
   const isEdgiOS = /\bEdgiOS\b/i.test(ua);      // Edge on iOS
-  const isBrave = /\bBrave\b/i.test(ua);        // Brave on iOS (Brave token present)
-  const isDuckDuckGo = /\bDuckDuckGo\b/i.test(ua); // DDG browser on iOS
+  const isBrave = /\bBrave\b/i.test(ua);        // Brave on iOS
+  const isDuckDuckGo = /\bDuckDuckGo\b/i.test(ua); // DuckDuckGo on iOS
   const isSafari =
     isIOS &&
     /\bSafari\b/i.test(ua) &&
     !(isCriOS || isFxiOS || isEdgiOS || isBrave || isDuckDuckGo);
-  // --------------------------------------------------------------------------------------
 
-  // Helper for Google Calendar URL
+  // Google Calendar URL helper
   function two(n){ return String(n).padStart(2,'0'); }
   function gcalDate(d){ return `${d.getFullYear()}${two(d.getMonth()+1)}${two(d.getDate())}T${two(d.getHours())}${two(d.getMinutes())}00`; }
   const endLocal = new Date(startLocal.getTime() + 120*60000);
@@ -542,24 +530,23 @@ function showInvitation({color,venue,theme}){
   const gcalUrl = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&details=${encodeURIComponent(description)}&location=${encodeURIComponent(locationText)}&dates=${datesParam}&ctz=America/New_York`;
 
   if (isIOS && !isSafari) {
-    // iOS non-Safari (Chrome/Brave/Firefox/Edge/DDG) → Google Calendar (opens app or web, sends notifications)
+    // iOS non-Safari (Chrome/Brave/Firefox/Edge/DuckDuckGo) → Google Calendar (app or web)
     addBtn.setAttribute("href", gcalUrl);
     addBtn.setAttribute("target", "_blank");
     addBtn.removeAttribute("download");
 
-    // Optional helper text
     const note = document.createElement('div');
     note.className = 'tiny';
     note.textContent = 'Using Apple Calendar? Open this page in Safari.';
     addBtn.parentElement.appendChild(note);
   } else {
-    // Safari on iOS/macOS + all desktop browsers → keep ICS flow
+    // Safari (iOS/macOS) + all desktop → ICS Blob flow
     const icsBlob = makeICS({ title, description, locationText, startLocal });
     const url = URL.createObjectURL(icsBlob);
     addBtn.setAttribute("href", url);
     addBtn.setAttribute("download", `${room.toLowerCase().replace(/\s+/g,'-')}-${todayStr()}.ics`);
 
-    // (Desktop convenience) Also offer Google Calendar link just below
+    // Desktop convenience: also offer Google Calendar link
     if (!isIOS) {
       const alt = document.createElement('a');
       alt.className = 'tiny';
@@ -596,7 +583,6 @@ function showLockedPaywall({color,venue,theme,areaId}){
   `;
   modalBackdrop.classList.add("show");
 
-  // Attach handlers after the elements are injected
   const singleBtn = document.getElementById("paySingleBtn");
   const allBtn    = document.getElementById("payAllBtn");
 
@@ -616,12 +602,12 @@ function showLockedPaywall({color,venue,theme,areaId}){
 function lockedEffect(el){ el.classList.remove("shake"); void el.offsetWidth; el.classList.add("shake"); if(navigator.vibrate){ try{ navigator.vibrate(80) }catch(e){} } }
 
 /* ===========================
-   Door click handling (multi-area aware)
+   Door click handling
 =========================== */
 async function onDoorClick(color){
   const myColor = getArchetypeColor();
   const theme   = themeForColor(color);
-  const areaId  = pickAreaForColor(color);  // choose among user-selected areas
+  const areaId  = pickAreaForColor(color);
   const venue   = venueFor(areaId, color);
   const today   = todayStr();
 
